--- a/src/app/features/auth/register/register.component.scss
+++ b/src/app/features/auth/register/register.component.scss
@@ -18,7 +18,7 @@
 .register-card__form {
   display: flex;
   flex-direction: column;
-  gap: v.space-fluid('md', 'xl');
+  gap: v.space-fluid('md', 'md-lg');
   text-align: left;
 }
 
